--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -29,6 +29,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # --- 修复开始: 添加转小写步骤 ---
+      - name: Lowercase Repository Owner
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >> ${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
+      # --- 修复结束 ---
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -38,8 +46,10 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
+          # 使用 env.OWNER_LC 替换 github.repository_owner
           tags: |
-            ghcr.io/${{ github.repository_owner }}/originsxc:2026
+            ghcr.io/${{ env.OWNER_LC }}/originsxc:2026
+          
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=HTTP Server
